--- a/Week2/FollowMe/test.css
+++ b/Week2/FollowMe/test.css
@@ -2,5 +2,5 @@
 /*This Style applies to all instances of the tags mentioned element selector which applies to all of the tags that is mentioned here 
 */
 h3,p{
-    color:purple;
+    color:blueviolet;
 }
